--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -18,7 +18,7 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Button fx:id="btnAddShowtime" layoutX="55.0" layoutY="289.0" mnemonicParsing="false" onMouseClicked="#getShowtimes" prefHeight="44.0" prefWidth="291.0" text="Add New Showtime">
+      <Button fx:id="btnAddShowtime" layoutX="55.0" layoutY="289.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" text="Add New Showtime">
         <cursor>
           <Cursor fx:constant="OPEN_HAND" />
         </cursor>
@@ -28,17 +28,17 @@
           <Cursor fx:constant="OPEN_HAND" />
         </cursor>
       </Button>
-      <Button layoutX="55.0" layoutY="428.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Print Tickets" >
+      <Button layoutX="55.0" layoutY="428.0" mnemonicParsing="false" onAction="#getShowtimes" prefHeight="44.0" prefWidth="291.0" text="Print Tickets">
         <cursor>
           <Cursor fx:constant="OPEN_HAND" />
         </cursor>
       </Button>
-      <Button layoutX="55.0" layoutY="499.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Reports" >
+      <Button layoutX="55.0" layoutY="499.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Reports">
         <cursor>
           <Cursor fx:constant="OPEN_HAND" />
         </cursor>
       </Button>
-      <Button layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" text="Exit" >
+      <Button layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" text="Exit">
         <cursor>
           <Cursor fx:constant="OPEN_HAND" />
         </cursor>
