--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.TheatreController">
+<AnchorPane id="AnchorPane" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.MainController">
    <children>
       <Label layoutX="39.0" layoutY="36.0" text="COOK FOREST SAWMILL CENTER FOR THE ARTS  |" textFill="WHITE">
          <font>
