--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -18,30 +18,15 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Button fx:id="btnAddShowtime" layoutX="55.0" layoutY="289.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" text="Add New Showtime">
-        <cursor>
-          <Cursor fx:constant="OPEN_HAND" />
-        </cursor>
+      <Button fx:id="btnAddShowtime" styleClass="button" layoutX="55.0" layoutY="289.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" text="Add New Showtime">
       </Button>
-      <Button layoutX="55.0" layoutY="360.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Remove Showtime">
-        <cursor>
-          <Cursor fx:constant="OPEN_HAND" />
-        </cursor>
+      <Button styleClass="button" layoutX="55.0" layoutY="360.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Remove Showtime">
       </Button>
-      <Button layoutX="55.0" layoutY="428.0" mnemonicParsing="false" onAction="#getShowtimes" prefHeight="44.0" prefWidth="291.0" text="Print Tickets">
-        <cursor>
-          <Cursor fx:constant="OPEN_HAND" />
-        </cursor>
+      <Button styleClass="button" layoutX="55.0" layoutY="428.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Add/Remove Seats">
       </Button>
-      <Button layoutX="55.0" layoutY="499.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Reports">
-        <cursor>
-          <Cursor fx:constant="OPEN_HAND" />
-        </cursor>
+      <Button styleClass="button" layoutX="55.0" layoutY="499.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Print Tickets">
       </Button>
-      <Button layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" text="Exit">
-        <cursor>
-          <Cursor fx:constant="OPEN_HAND" />
-        </cursor>
+      <Button styleClass="button" layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" text="Exit">
       </Button>
    </children>
 </AnchorPane>
