Added ability to update shows

--- a/src/main/resources/fxml/Showtime.fxml
+++ b/src/main/resources/fxml/Showtime.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import org.sawmill.theater.ticketing.fx.TextFieldLimited?>
 
@@ -22,7 +23,11 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Label fx:id="lblShowName" layoutX="70.0" layoutY="272.0" styleClass="form-label" text="Name:" textFill="WHITE" />
+      <VBox layoutX="70.0" layoutY="171.0" prefHeight="120.0" prefWidth="120.0">
+          <Label fx:id="lblSelectShow" styleClass="form-label" text="Select Show:" wrapText="true" textFill="WHITE" />
+      </VBox>
+      <ComboBox fx:id="cmboBxSelectShow" layoutX="230.0" layoutY="171.0" prefHeight="48.0" prefWidth="500.0" styleClass="form-date-input" onAction="#showSelected" />
+      <Label fx:id="lblShowName" layoutX="70.0" layoutY="271.0" styleClass="form-label" text="Name:" textFill="WHITE" />
       <TextFieldLimited fx:id="txtBxShowName" layoutX="230.0" layoutY="263.0" prefHeight="48.0" prefWidth="500.0" styleClass="form-text-input" />
       <Label fx:id="lblGroup" layoutX="71.0" layoutY="351.0" styleClass="form-label" text="Group:" textFill="WHITE" />
       <TextFieldLimited fx:id="txtBxGroup" layoutX="230.0" layoutY="342.0" prefHeight="48.0" prefWidth="500.0" styleClass="form-text-input" />
@@ -33,13 +38,14 @@
       <Label fx:id="lblTimeDivider" layoutX="311.0" layoutY="511.0" styleClass="form-label" text=":" textFill="WHITE" />
       <TextFieldLimited fx:id="txtBxTimeMinute" layoutX="330.0" layoutY="507.0" prefHeight="48.0" prefWidth="72.0" styleClass="form-text-input" />
       <ComboBox fx:id="cmboBxAmPm" layoutX="435.0" layoutY="508.0" prefHeight="48.0" prefWidth="134.0" styleClass="form-date-input" />
+      <Label fx:id="lblShowSelectError" layoutX="756.0" layoutY="171.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please select a show" textFill="RED" />
       <Label fx:id="lblNameError" layoutX="756.0" layoutY="275.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a name" textFill="RED" />
       <Label fx:id="lblGroupError" layoutX="756.0" layoutY="353.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a group" textFill="RED" />
       <Label fx:id="lblDateError" layoutX="756.0" layoutY="437.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please select a date" textFill="RED" />
       <Label fx:id="lblTimeError" layoutX="756.0" layoutY="517.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a time" textFill="RED" />
-      <Button fx:id="btnSubmit" layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="44.0" prefWidth="150.0" text="Submit">
+      <Button fx:id="btnSubmit" layoutX="241.0" layoutY="805.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="44.0" prefWidth="150.0" text="Submit">
       </Button>
-      <Button fx:id="btnCancel" layoutX="241.0" layoutY="805.0" mnemonicParsing="false" onAction="#showMain" prefHeight="44.0" prefWidth="150.0" text="Cancel">
+      <Button fx:id="btnCancel" layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onAction="#showMain" prefHeight="44.0" prefWidth="150.0" text="Back">
       </Button>
    </children>    
 </AnchorPane>
