--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,15 +17,16 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Button fx:id="btnAddShowtime" styleClass="button" layoutX="55.0" layoutY="289.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" text="Add New Showtime">
+      <Button fx:id="btnAddShow" layoutX="55.0" layoutY="284.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Add New Show">
       </Button>
-      <Button styleClass="button" layoutX="55.0" layoutY="360.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Remove Showtime">
+      <Button fx:id="btnRemoveShow" layoutX="55.0" layoutY="400.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Remove Show">
       </Button>
-      <Button styleClass="button" layoutX="55.0" layoutY="428.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Add/Remove Seats">
+      <Button layoutX="55.0" layoutY="551.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Add/Remove Seats">
       </Button>
-      <Button styleClass="button" layoutX="55.0" layoutY="499.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" text="Print Tickets">
+      <Button layoutX="55.0" layoutY="612.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Print Tickets">
       </Button>
-      <Button styleClass="button" layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" text="Exit">
+      <Button layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Exit">
       </Button>
+      <Button fx:id="btnUpdateShow" layoutX="55.0" layoutY="342.0" mnemonicParsing="false" onAction="#updateShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Update Show" />
    </children>
 </AnchorPane>
