--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -19,7 +19,7 @@
       </Label>
       <Button fx:id="btnAddShow" layoutX="55.0" layoutY="284.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Add New Show">
       </Button>
-      <Button fx:id="btnRemoveShow" layoutX="55.0" layoutY="400.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Remove Show">
+      <Button fx:id="btnRemoveShow" layoutX="55.0" layoutY="400.0" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Remove Show">
       </Button>
       <Button layoutX="55.0" layoutY="551.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Add/Remove Seats">
       </Button>
