--- a/src/main/resources/fxml/Chart.fxml
+++ b/src/main/resources/fxml/Chart.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -924,6 +927,25 @@
             <Rectangle fx:id="e14" height="40.0" rotate="38.57" stroke="BLACK" strokeType="OUTSIDE" styleClass="seat-open" width="40.0" />
          </children>
       </StackPane>
-      <Button fx:id="btnBack" layoutX="65.0" layoutY="805.0" mnemonicParsing="false" text="Back" onAction="#showMain" prefHeight="44.0" prefWidth="150.0" />
+      <Button fx:id="btnBack" layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onAction="#showMain" prefHeight="44.0" prefWidth="150.0" text="Back" />
+      <Label layoutX="308.0" layoutY="42.0" styleClass="form-label" text="Show:" textFill="WHITE" />
+      <Label layoutX="308.0" layoutY="112.0" styleClass="form-label" text="Group:" textFill="WHITE" />
+      <Label layoutX="308.0" layoutY="178.0" styleClass="form-label" text="Date:" textFill="WHITE" />
+      <ComboBox fx:id="cmboBxSelectShow" layoutX="453.0" layoutY="37.0" onAction="#showSelected" prefHeight="48.0" prefWidth="437.0" styleClass="form-date-input" />
+      <Label fx:id="lblGroupOutput" layoutX="453.0" layoutY="112.0" styleClass="form-label" textFill="WHITE" />
+      <Label fx:id="lblDateOutput" layoutX="453.0" layoutY="178.0" styleClass="form-label" textFill="WHITE" />
+      <Label layoutX="308.0" layoutY="296.0" styleClass="form-label" text="Section:" textFill="WHITE" />
+      <Label layoutX="537.0" layoutY="296.0" styleClass="form-label" text="Row:" textFill="WHITE" />
+      <Label layoutX="731.0" layoutY="296.0" styleClass="form-label" text="Seat:" textFill="WHITE" />
+      <Label fx:id="lblSectionOutput" layoutX="424.0" layoutY="296.0" styleClass="form-label" textFill="WHITE" />
+      <Label fx:id="lblRowOutput" layoutX="619.0" layoutY="296.0" styleClass="form-label" textFill="WHITE" />
+      <Label fx:id="lblSeatOutput" layoutX="812.0" layoutY="296.0" styleClass="form-label" textFill="WHITE" />
+      <Label layoutX="358.0" layoutY="371.0" styleClass="form-label" text="First Name:" textFill="WHITE" />
+      <Label layoutX="358.0" layoutY="441.0" styleClass="form-label" text="Last Name:" textFill="WHITE" />
+      <TextField fx:id="txtBxFirstName" layoutX="534.0" layoutY="364.0" styleClass="form-text-input" />
+      <TextField fx:id="txtBxLastName" layoutX="534.0" layoutY="433.0" styleClass="form-text-input" />
+      <Button fx:id="btnAdd" layoutX="425.0" layoutY="552.0" mnemonicParsing="false" onAction="#modifySeat" prefHeight="44.0" prefWidth="114.0" text="Add" />
+      <Button fx:id="btnDelete" layoutX="666.0" layoutY="553.0" mnemonicParsing="false" onAction="#deleteSeat" prefHeight="44.0" prefWidth="114.0" text="Delete" />
+      <Label fx:id="lblNameError" layoutX="535.0" layoutY="493.0" styleClass="form-label" text="* Please enter name" textFill="RED" />
     </children>
 </AnchorPane>
