--- a/src/main/resources/fxml/Chart.fxml
+++ b/src/main/resources/fxml/Chart.fxml
@@ -947,5 +947,6 @@
       <Button fx:id="btnAdd" layoutX="425.0" layoutY="552.0" mnemonicParsing="false" onAction="#modifySeat" prefHeight="44.0" prefWidth="114.0" text="Add" />
       <Button fx:id="btnDelete" layoutX="666.0" layoutY="553.0" mnemonicParsing="false" onAction="#deleteSeat" prefHeight="44.0" prefWidth="114.0" text="Delete" />
       <Label fx:id="lblNameError" layoutX="535.0" layoutY="493.0" styleClass="form-label" text="* Please enter name" textFill="RED" />
+      <Button fx:id="btnPrint" layoutX="989.0" layoutY="805.0" mnemonicParsing="false" onAction="#printSetup" prefHeight="44.0" prefWidth="150.0" text="Print" />
     </children>
 </AnchorPane>
