--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -21,9 +21,9 @@
       </Button>
       <Button fx:id="btnRemoveShow" layoutX="55.0" layoutY="400.0" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Remove Show">
       </Button>
-      <Button layoutX="55.0" layoutY="551.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" onAction="#updateSeats" styleClass="button" text="Update Seats">
+      <Button layoutX="55.0" layoutY="551.0" mnemonicParsing="false" onAction="#updateSeats" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Update Seats">
       </Button>
-      <Button layoutX="55.0" layoutY="612.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Print Tickets">
+      <Button layoutX="55.0" layoutY="612.0" mnemonicParsing="false" onAction="#printTickets" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Print Tickets">
       </Button>
       <Button layoutX="55.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="Exit">
       </Button>
