--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -39,3 +39,20 @@
     -fx-fill: #4286f4;
 }
 
+.seat-selected-printing {
+    -fx-cursor: hand;
+    -fx-fill: #cd7cff;
+}
+
+#theatreTicket {
+    -fx-border-color: black;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+}
+
+#ticketStub {
+    -fx-border-color: black;
+    -fx-border-style: dashed;
+    -fx-border-width: 0px 0px 0px 1px;
+}
+
