--- a/src/main/resources/fxml/Ticket.fxml
+++ b/src/main/resources/fxml/Ticket.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="TicketAnchorPane" prefHeight="200.0" prefWidth="600.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="TicketAnchorPane" prefHeight="200.0" prefWidth="600.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.TicketController">
    <children>
       <HBox fx:id="theatreTicket" prefHeight="200.0" prefWidth="600.0">
          <children>
