Added ticket stub. Removed some debugging code

--- a/src/main/resources/fxml/Chart.fxml
+++ b/src/main/resources/fxml/Chart.fxml
@@ -931,7 +931,7 @@
       <Label layoutX="308.0" layoutY="42.0" styleClass="form-label" text="Show:" textFill="WHITE" />
       <Label layoutX="308.0" layoutY="112.0" styleClass="form-label" text="Group:" textFill="WHITE" />
       <Label layoutX="308.0" layoutY="178.0" styleClass="form-label" text="Date:" textFill="WHITE" />
-      <ComboBox fx:id="cmboBxSelectShow" layoutX="453.0" layoutY="37.0" onAction="#showSelected" prefHeight="48.0" prefWidth="437.0" styleClass="form-date-input" />
+      <ComboBox fx:id="cmboBxSelectShow" layoutX="453.0" layoutY="37.0" onAction="#showSelected" prefHeight="48.0" prefWidth="437.0" styleClass="show-selector" />
       <Label fx:id="lblGroupOutput" layoutX="453.0" layoutY="112.0" styleClass="form-label" textFill="WHITE" />
       <Label fx:id="lblDateOutput" layoutX="453.0" layoutY="178.0" styleClass="form-label" textFill="WHITE" />
       <Label layoutX="308.0" layoutY="296.0" styleClass="form-label" text="Section:" textFill="WHITE" />
