--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="MainAnchorPane" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.MainController">
@@ -17,16 +18,20 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Button fx:id="btnAddShow" layoutX="65.0" layoutY="284.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="ADD NEW SHOW">
-      </Button>
-      <Button fx:id="btnRemoveShow" layoutX="65.0" layoutY="400.0" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="REMOVE SHOW">
-      </Button>
-      <Button layoutX="65.0" layoutY="551.0" mnemonicParsing="false" onAction="#updateSeats" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="UPDATE SEATS">
-      </Button>
-      <Button layoutX="65.0" layoutY="612.0" mnemonicParsing="false" onAction="#printTickets" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="PRINT TICKETS">
-      </Button>
-      <Button layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="EXIT">
-      </Button>
+      <Button fx:id="btnAddShow" layoutX="65.0" layoutY="284.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="ADD NEW SHOW" />
       <Button fx:id="btnUpdateShow" layoutX="65.0" layoutY="342.0" mnemonicParsing="false" onAction="#updateShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="UPDATE SHOW" />
+      <Button fx:id="btnRemoveShow" layoutX="65.0" layoutY="400.0" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="REMOVE SHOW" />
+      <Button fx:id="btnUpdateSeats" layoutX="65.0" layoutY="551.0" mnemonicParsing="false" onAction="#updateSeats" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="UPDATE SEATS" />
+      <Button fx:id="btnPrintTickets" layoutX="65.0" layoutY="612.0" mnemonicParsing="false" onAction="#printTickets" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="PRINT TICKETS" />
+      <Button layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="EXIT" />
+      <Button layoutX="830.0" layoutY="748.0" mnemonicParsing="false" onAction="#createDatabase" prefHeight="44.0" prefWidth="314.0" styleClass="button" text="NEW DATABASE" />
+      <Button layoutX="830.0" layoutY="805.0" mnemonicParsing="false" onAction="#connectToDatabase" prefHeight="44.0" prefWidth="314.0" styleClass="button" text="CONNECT TO DATABASE" />
+      <Label layoutX="866.0" layoutY="710.0" text="Database Status:" textFill="WHITE">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <Circle fx:id="statusIndicator" layoutX="1090.0" layoutY="725.0" radius="12.0" />
+      
    </children>
 </AnchorPane>
