--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -3,21 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="MainAnchorPane" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.MainController">
    <children>
-      <Label layoutX="39.0" layoutY="36.0" text="COOK FOREST SAWMILL CENTER FOR THE ARTS  |" textFill="WHITE">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <Label layoutX="813.0" layoutY="43.0" text="Where nature meets the arts!" textFill="WHITE">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
       <Button fx:id="btnAddShow" layoutX="65.0" layoutY="284.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="ADD NEW SHOW" />
       <Button fx:id="btnUpdateShow" layoutX="65.0" layoutY="342.0" mnemonicParsing="false" onAction="#updateShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="UPDATE SHOW" />
       <Button fx:id="btnRemoveShow" layoutX="65.0" layoutY="400.0" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="REMOVE SHOW" />
@@ -32,6 +23,25 @@
          </font>
       </Label>
       <Circle fx:id="statusIndicator" layoutX="1090.0" layoutY="725.0" radius="12.0" />
+      <HBox layoutX="56.0" layoutY="26.0" prefHeight="44.0" prefWidth="1096.0">
+         <children>
+            <Label alignment="CENTER" prefHeight="44.0" prefWidth="809.0" text="COOK FOREST SAWMILL CENTER FOR THE ARTS" textFill="WHITE">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" prefHeight="44.0" prefWidth="10.0" text="|" textFill="WHITE">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" prefHeight="73.0" prefWidth="377.0" text="Where nature meets the arts!" textFill="WHITE">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
       
    </children>
 </AnchorPane>
