--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -1,47 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="MainAnchorPane" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.MainController">
-   <children>
-      <Button fx:id="btnAddShow" layoutX="65.0" layoutY="284.0" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="ADD NEW SHOW" />
-      <Button fx:id="btnUpdateShow" layoutX="65.0" layoutY="342.0" mnemonicParsing="false" onAction="#updateShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="UPDATE SHOW" />
-      <Button fx:id="btnRemoveShow" layoutX="65.0" layoutY="400.0" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="REMOVE SHOW" />
-      <Button fx:id="btnUpdateSeats" layoutX="65.0" layoutY="551.0" mnemonicParsing="false" onAction="#updateSeats" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="UPDATE SEATS" />
-      <Button fx:id="btnPrintTickets" layoutX="65.0" layoutY="612.0" mnemonicParsing="false" onAction="#printTickets" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="PRINT TICKETS" />
-      <Button layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="44.0" prefWidth="291.0" styleClass="button" text="EXIT" />
-      <Button layoutX="830.0" layoutY="748.0" mnemonicParsing="false" onAction="#createDatabase" prefHeight="44.0" prefWidth="314.0" styleClass="button" text="NEW DATABASE" />
-      <Button layoutX="830.0" layoutY="805.0" mnemonicParsing="false" onAction="#connectToDatabase" prefHeight="44.0" prefWidth="314.0" styleClass="button" text="CONNECT TO DATABASE" />
-      <Label layoutX="866.0" layoutY="710.0" text="Database Status:" textFill="WHITE">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Circle fx:id="statusIndicator" layoutX="1090.0" layoutY="725.0" radius="12.0" />
-      <HBox layoutX="56.0" layoutY="26.0" prefHeight="44.0" prefWidth="1096.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="809.0" text="COOK FOREST SAWMILL CENTER FOR THE ARTS" textFill="WHITE">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="10.0" text="|" textFill="WHITE">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" prefHeight="73.0" prefWidth="377.0" text="Where nature meets the arts!" textFill="WHITE">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      
-   </children>
-</AnchorPane>
+<GridPane id="MainScreen" prefHeight="600.0" prefWidth="800.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.MainController">
+    <columnConstraints>
+        <ColumnConstraints percentWidth="30.0" />
+        <ColumnConstraints percentWidth="40.0" />
+        <ColumnConstraints percentWidth="30.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <Label alignment="CENTER" contentDisplay="TOP" text="COOK FOREST SAWMILL CENTER FOR THE ARTS" textFill="WHITE" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+            <font>
+                <Font size="19.0" />
+            </font>
+        </Label>
+        <Label alignment="CENTER" text="Where nature meets the arts!" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Button fx:id="btnAddShow" mnemonicParsing="false" onAction="#showNewShowtime" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="ADD NEW SHOW" GridPane.rowIndex="4">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="btnUpdateShow" mnemonicParsing="false" onAction="#updateShowtime" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="UPDATE SHOW" GridPane.rowIndex="5">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="btnRemoveShow" mnemonicParsing="false" onAction="#deleteShowtime" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="REMOVE SHOW" GridPane.rowIndex="6">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="btnUpdateSeats" mnemonicParsing="false" onAction="#updateSeats" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="UPDATE SEATS" GridPane.rowIndex="8">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="btnPrintTickets" mnemonicParsing="false" onAction="#printTickets" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="PRINT TICKETS" GridPane.rowIndex="9">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button mnemonicParsing="false" onMouseClicked="#closeApplication" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="EXIT" GridPane.rowIndex="12">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button mnemonicParsing="false" onAction="#connectToDatabase" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="CONNECT TO DATABASE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="12">
+            <GridPane.margin>
+                <Insets bottom="5.0" right="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button mnemonicParsing="false" onAction="#createDatabase" prefHeight="100.0" prefWidth="400.0" styleClass="button" text="NEW DATABASE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="11">
+            <GridPane.margin>
+                <Insets bottom="5.0" right="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <GridPane prefHeight="100.0" prefWidth="400.0" GridPane.columnIndex="2" GridPane.rowIndex="10">
+            <columnConstraints>
+                <ColumnConstraints percentWidth="70.0" />
+                <ColumnConstraints percentWidth="30.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Label alignment="CENTER_RIGHT" text="Database Status:  " textFill="WHITE" GridPane.halignment="RIGHT">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Circle fx:id="statusIndicator" radius="9.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" />
+            </children>
+        </GridPane>
+    </children>
+</GridPane>
