--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,7 +1,7 @@
-#MainAnchorPane {
+#MainScreen {
     -fx-background-image: url("../theatre_seating_darkened.jpg");
     -fx-background-repeat: stretch;
-    -fx-background-size: 1200 900;
+    -fx-background-size: 100% 100%;
     -fx-background-position: center center;
 }
 
@@ -18,7 +18,6 @@
 }
 
 .button {
-    -fx-font-size: 20px;
     -fx-font-weight: bold;
     -fx-background-radius: 0 0 0 0;
     -fx-background-color: orange;
