--- a/src/main/resources/fxml/Showtime.fxml
+++ b/src/main/resources/fxml/Showtime.fxml
@@ -1,61 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import org.sawmill.theater.ticketing.fx.TextFieldLimited?>
 
-<AnchorPane id="AnchorPane" prefHeight="900.0" prefWidth="1200.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.ShowtimeController">
-   <children>
-      <HBox layoutX="56.0" layoutY="26.0" prefHeight="44.0" prefWidth="1096.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="809.0" text="COOK FOREST SAWMILL CENTER FOR THE ARTS" textFill="WHITE">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" prefHeight="44.0" prefWidth="10.0" text="|" textFill="WHITE">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" prefHeight="73.0" prefWidth="377.0" text="Where nature meets the arts!" textFill="WHITE">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <VBox layoutX="70.0" layoutY="171.0" prefHeight="120.0" prefWidth="120.0">
-          <Label fx:id="lblSelectShow" styleClass="form-label" text="Select Show:" wrapText="true" textFill="WHITE" />
-      </VBox>
-      <ComboBox fx:id="cmboBxSelectShow" layoutX="230.0" layoutY="171.0" prefHeight="48.0" prefWidth="500.0" styleClass="form-date-input" onAction="#showSelected" />
-      <Label fx:id="lblShowName" layoutX="70.0" layoutY="271.0" styleClass="form-label" text="Name:" textFill="WHITE" />
-      <TextFieldLimited fx:id="txtBxShowName" layoutX="230.0" layoutY="263.0" prefHeight="48.0" prefWidth="500.0" styleClass="form-text-input" />
-      <Label fx:id="lblGroup" layoutX="71.0" layoutY="351.0" styleClass="form-label" text="Group:" textFill="WHITE" />
-      <TextFieldLimited fx:id="txtBxGroup" layoutX="230.0" layoutY="342.0" prefHeight="48.0" prefWidth="500.0" styleClass="form-text-input" />
-      <Label fx:id="lblDate" layoutX="72.0" layoutY="431.0" styleClass="form-label" text="Date:" textFill="WHITE" />
-      <DatePicker fx:id="showDatePicker" layoutX="230.0" layoutY="424.0" prefHeight="48.0" prefWidth="341.0" styleClass="form-text-input" />
-      <Label fx:id="lblTime" layoutX="72.0" layoutY="515.0" styleClass="form-label" text="Time:" textFill="WHITE" />
-      <TextFieldLimited fx:id="txtBxTimeHour" layoutX="229.0" layoutY="507.0" prefHeight="48.0" prefWidth="72.0" styleClass="form-label" />
-      <Label fx:id="lblTimeDivider" layoutX="311.0" layoutY="511.0" styleClass="form-label" text=":" textFill="WHITE" />
-      <TextFieldLimited fx:id="txtBxTimeMinute" layoutX="330.0" layoutY="507.0" prefHeight="48.0" prefWidth="72.0" styleClass="form-text-input" />
-      <ComboBox fx:id="cmboBxAmPm" layoutX="435.0" layoutY="508.0" prefHeight="48.0" prefWidth="134.0" styleClass="form-date-input" />
-      <Label fx:id="lblShowSelectError" layoutX="756.0" layoutY="171.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please select a show" textFill="RED" />
-      <Label fx:id="lblNameError" layoutX="756.0" layoutY="275.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a name" textFill="RED" />
-      <Label fx:id="lblGroupError" layoutX="756.0" layoutY="353.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a group" textFill="RED" />
-      <Label fx:id="lblDateError" layoutX="756.0" layoutY="437.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please select a date" textFill="RED" />
-      <Label fx:id="lblTimeError" layoutX="756.0" layoutY="517.0" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a time" textFill="RED" />
-      <Button fx:id="btnSubmit" layoutX="241.0" layoutY="805.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="44.0" prefWidth="150.0" text="Submit">
-      </Button>
-      <Button fx:id="btnCancel" layoutX="65.0" layoutY="805.0" mnemonicParsing="false" onAction="#showMain" prefHeight="44.0" prefWidth="150.0" text="Back">
-      </Button>
-   </children>    
-</AnchorPane>
+<GridPane id="ShowtimePane" prefHeight="600.0" prefWidth="800.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sawmill.theater.ticketing.controller.ShowtimeController">
+    <columnConstraints>
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints percentWidth="10.0" />
+        <ColumnConstraints />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+    </rowConstraints>
+    <children>
+        <Label alignment="CENTER" prefHeight="73.0" prefWidth="377.0" text="Where nature meets the arts!" textFill="WHITE" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.halignment="CENTER">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Label alignment="CENTER" prefHeight="44.0" prefWidth="809.0" text="COOK FOREST SAWMILL CENTER FOR THE ARTS" textFill="WHITE" GridPane.columnSpan="7" GridPane.halignment="CENTER">
+            <font>
+                <Font size="19.0" />
+            </font>
+        </Label>
+        <Label fx:id="lblSelectShow" styleClass="form-label" text="Select Show:" textFill="WHITE" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="4">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <ComboBox fx:id="cmboBxSelectShow" onAction="#showSelected" prefHeight="20.0" prefWidth="700.0" styleClass="form-date-input" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.rowIndex="4" />
+        <Label fx:id="lblShowSelectError" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please select a show" textFill="RED" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="4">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="lblShowName" styleClass="form-label" text="Name:" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <TextFieldLimited fx:id="txtBxShowName" prefHeight="20.0" prefWidth="700.0" styleClass="form-text-input" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.rowIndex="5" />
+        <Label fx:id="lblNameError" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a name" textFill="RED" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="5">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="lblGroup" styleClass="form-label" text="Group:" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="6">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="lblDate" styleClass="form-label" text="Date:" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="7">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="lblTime" styleClass="form-label" text="Time:" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="8">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <TextFieldLimited fx:id="txtBxGroup" prefHeight="20.0" prefWidth="700.0" styleClass="form-text-input" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.rowIndex="6" />
+        <Label fx:id="lblGroupError" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a group" textFill="RED" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="6">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <DatePicker fx:id="showDatePicker" prefHeight="20.0" prefWidth="600.0" styleClass="form-text-input" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+        <Label fx:id="lblDateError" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please select a date" textFill="RED" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="7">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="lblTimeError" prefHeight="30.0" prefWidth="361.0" styleClass="form-label" text="* Please enter a time" textFill="RED" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="8">
+            <GridPane.margin>
+                <Insets left="20.0" />
+            </GridPane.margin>
+        </Label>
+        <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#showMain" prefHeight="44.0" prefWidth="150.0" text="Back" GridPane.columnSpan="2" GridPane.rowIndex="12">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="20.0" right="10.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="btnSubmit" mnemonicParsing="false" onAction="#validateFields" prefHeight="44.0" prefWidth="150.0" text="Submit" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="12">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="10.0" right="20.0" top="5.0" />
+            </GridPane.margin>
+        </Button>
+        <GridPane GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="8">
+            <columnConstraints>
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+                <ColumnConstraints percentWidth="10.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <TextFieldLimited fx:id="txtBxTimeHour" prefHeight="20.0" prefWidth="72.0" styleClass="form-label" GridPane.columnSpan="2" />
+                <TextFieldLimited fx:id="txtBxTimeMinute" prefHeight="20.0" prefWidth="72.0" styleClass="form-text-input" GridPane.columnIndex="3" GridPane.columnSpan="2" />
+                <Label fx:id="lblTimeDivider" prefHeight="20.0" styleClass="form-label" text=":" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                <ComboBox fx:id="cmboBxAmPm" prefHeight="20.0" prefWidth="100.0" styleClass="form-date-input" GridPane.columnIndex="6" GridPane.columnSpan="4" GridPane.halignment="RIGHT" />
+            </children>
+        </GridPane>
+    </children>
+</GridPane>
